--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,17 +63,17 @@ flutter:
 
 
   fonts:
-    - family: IBM-
+    - family: SST-Arabic
       fonts:
-        - asset: assets/fonts/bold.ttf
+        - asset: assets/fonts/alfont_com_AlFont_com_SST-Arabic-Bold.ttf
           weight: 700
         - asset: assets/fonts/semiBold.ttf
           weight: 600
-        - asset: assets/fonts/medium.ttf
+        - asset: assets/fonts/alfont_com_AlFont_com_SST-Arabic-Medium.ttf
           weight: 500
-        - asset: assets/fonts/regular.ttf
+        - asset: assets/fonts/alfont_com_AlFont_com_SST-Arabic-Roman.ttf
           weight: 400
-        - asset: assets/fonts/light.ttf
+        - asset: assets/fonts/alfont_com_AlFont_com_SST-Arabic-Light.ttf
           weight: 300
 
 # تكوين أيقونة التطبيق
