feat(ios): enable file sharing and document opening in Info.plist
Added support for file sharing and document opening in place by updating the Info.plist file. This enhancement improves the app's functionality, allowing users to share files and access documents more conveniently.

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -82,5 +82,9 @@
 		<true/>
 		<key>UIViewControllerBasedStatusBarAppearance</key>
 		<false/>
+		<key>UIFileSharingEnabled</key>
+		<true/>
+		<key>LSSupportsOpeningDocumentsInPlace</key>
+		<true/>
 	</dict>
 </plist>
