feat(notification): enhance local notifications with vibration and lights support
Updated the local notifications service to enable vibration and lights for notifications, improving user engagement and alert visibility. Additionally, added a default notification sound in the AndroidManifest.xml to ensure consistent audio feedback for alerts.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -54,6 +54,9 @@
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
             android:resource="@mipmap/launcher_icon" />
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_sound"
+            android:resource="@raw/notification" />
             
         <!-- Receptor para notificaciones -->
         <receiver android:exported="false" android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationReceiver" />
