chore(.gitignore): update to include additional Android build artifacts
Expanded the .gitignore file to exclude various Android NDK and build artifacts, including directories and files related to C++ builds and Gradle properties. This change helps maintain a cleaner repository by preventing unnecessary files from being tracked.

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,16 @@ app.*.map.json
 
 # FVM Version Cache
 .fvm/
+
+# Android NDK and Build artifacts
+**/android/**/cxx/
+**/android/**/build/
+**/android/**/intermediates/
+**/configure_fingerprint.bin
+android/app/cxx/
+android/app/.cxx/
+android/.gradle/
+
+# Additional Android build files
+android/app/src/main/jniLibs/
+android/gradle.properties.backup
